add vector test

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -54,10 +54,15 @@ target_link_libraries(
     GTest::gmock_main
 )
 
+add_executable(vector_test vector_test.cpp)
+target_link_libraries(vector_test coordinate)
+target_link_libraries(vector_test GTest::gtest_main GTest::gmock_main)
+
 include(GoogleTest)
 gtest_discover_tests(boundary_test)
 gtest_discover_tests(inner_test)
 gtest_discover_tests(fish_test)
 gtest_discover_tests(io_test)
+gtest_discover_tests(vector_test)
 
 enable_testing()
