--- a/config.yaml
+++ b/config.yaml
@@ -4,6 +4,7 @@ simulation-params:
   n-fish: 1000
   max-steps: 1000
   delta-t: 0.01
+  snapshot-interval: 100
 fish-params:
   vel-standard: 1.5
   vel-repulsion: 1.5
