add eom test and fix bugs

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -54,6 +54,22 @@ target_link_libraries(
     GTest::gmock_main
 )
 
+add_executable(
+    eom_test
+    eom_test.cpp
+)
+target_link_libraries(
+    eom_test
+    eom
+    fish
+    coordinate
+)
+target_link_libraries(
+    eom_test
+    GTest::gtest_main
+    GTest::gmock_main
+)
+
 add_executable(vector_test vector_test.cpp)
 target_link_libraries(vector_test coordinate)
 target_link_libraries(vector_test GTest::gtest_main GTest::gmock_main)
@@ -64,5 +80,6 @@ gtest_discover_tests(inner_test)
 gtest_discover_tests(fish_test)
 gtest_discover_tests(io_test)
 gtest_discover_tests(vector_test)
+gtest_discover_tests(eom_test)
 
 enable_testing()
