--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,9 @@ add_executable(fish_school main.cpp)
 target_link_libraries(fish_school PRIVATE project_warnings)
 target_link_libraries(fish_school PRIVATE fish coordinate simulation io eom)
 target_link_libraries(fish_school PUBLIC yaml-cpp::yaml-cpp)
+if(OpenMP_CXX_FOUND)
+    target_link_libraries(fish_school PUBLIC OpenMP::OpenMP_CXX)
+endif()
 
 add_library(coordinate coordinate.cpp)
 target_link_libraries(coordinate PRIVATE project_warnings)
