add movie generation script and cmake install

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,3 +36,8 @@ add_subdirectory(src)
 
 # Copy the config.yaml file to the build directory
 file(COPY ${CMAKE_SOURCE_DIR}/config.yaml DESTINATION ${CMAKE_BINARY_DIR}/src)
+
+install(TARGETS fish_school DESTINATION .)
+install(FILES ${CMAKE_SOURCE_DIR}/config.yaml DESTINATION .)
+install(FILES ${CMAKE_SOURCE_DIR}/create_movie.sh DESTINATION .
+PERMISSIONS OWNER_WRITE OWNER_READ OWNER_EXECUTE)
