--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -23,6 +23,7 @@ jobs:
           sudo apt-get install -y cppcheck
           sudo apt-get install -y clang-tidy
           sudo apt-get install -y ninja-build
+          sudo apt-get install -y libomp-dev
 
       - name: Build
         run: |
