--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -24,6 +24,7 @@ jobs:
           sudo apt-get install -y clang-tidy
           sudo apt-get install -y ninja-build
           sudo apt-get install -y libomp-dev
+          sudo apt-get install -y llvm
 
       - name: Build
         run: |
